views: allow MenuDelegate implementations to override menu text colors

This change:
1) Renames MenuDelegate::GetLabelFontList to MenuDelegate::GetLabelStyle;
2) Removes MenuDelegate::GetShouldUseNormalForegroundColor() in favor of
   the MenuDelegate supplying its own foreground color;
3) Removes the "emphasized" notion from MenuItemView, since it was only used
   in one place (AppMenu) to achieve the behavior of having a disabled item
   paint as an enabled item;

This leads into a cleanup of MenuItemView::GetTextColor() to use
TypographyProvider to retrieve all colors.

Bug: 865318
Change-Id: Ie6238cfd5c9baac7be595809560485c23b804a08
Reviewed-on: https://chromium-review.googlesource.com/1186702
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586343}
Former-commit-id: 7ec662f59629f0386eaffd62da0bba450b3a28a3