chrome/browser/ui/views/toolbar/app_menu.h
@@ -61,8 +61,7 @@ class AppMenu : public views::MenuDelegate,
   void RemoveObserver(AppMenuObserver* observer);
 
   // MenuDelegate overrides:
-  const gfx::FontList* GetLabelFontList(int command_id) const override;
-  bool GetShouldUseNormalForegroundColor(int command_id) const override;
+  void GetLabelStyle(int command_id, LabelStyle* style) const override;
   base::string16 GetTooltipText(int command_id,
                                 const gfx::Point& p) const override;
   bool IsTriggerableEvent(views::MenuItemView* menu,
