ui/views/controls/menu/menu_model_adapter.h
@@ -71,7 +71,7 @@ class VIEWS_EXPORT MenuModelAdapter : public MenuDelegate {
   bool IsTriggerableEvent(MenuItemView* source, const ui::Event& e) override;
   bool GetAccelerator(int id, ui::Accelerator* accelerator) const override;
   base::string16 GetLabel(int id) const override;
-  const gfx::FontList* GetLabelFontList(int id) const override;
+  void GetLabelStyle(int id, LabelStyle* style) const override;
   bool IsCommandEnabled(int id) const override;
   bool IsCommandVisible(int id) const override;
   bool IsItemChecked(int id) const override;
